--- a/docker/nginx/default.conf.template
+++ b/docker/nginx/default.conf.template
@@ -43,6 +43,9 @@ server {
         location ~ config\.json {
             try_files $uri =404;
         }
+        location ~ report.*\.html {
+            try_files $uri =404;
+        }
         try_files $uri /templates/index.html;
     }
 
