--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,18 +40,18 @@ services:
       - MREPORT_DATABASE_PWD
       - MREPORT_DATABASE_SCHEMA
     volumes:
-      - "reports:/home/apprunner/backend/reports"
+      - "reports:/home/apprunner/backend/reports:rw"
+      - "./frontend/static/picto:/home/apprunner/frontend/static/picto:ro"
     depends_on:
       - "db"
-
 
   frontend:
       image: nginx:1.19
       volumes:
-        - "./docker/nginx:/etc/nginx/templates"
-        - "reports:/var/www/reports"
-        - "./frontend/static/:/var/www/static"
-        - "./frontend/templates/:/var/www/templates"
+        - "./docker/nginx:/etc/nginx/templates:ro"
+        - "./frontend/static/:/var/www/static:ro"
+        - "./frontend/templates/:/var/www/templates:ro"
+        - "reports:/var/www/reports:ro"
       environment:
         - NGINX_PORT
         - MREPORT_WEB_HOST_PORT
